--- a/src/app/components/task-item/task-item.component.html
+++ b/src/app/components/task-item/task-item.component.html
@@ -1,4 +1,13 @@
-<div class="task">
-  <h3>{{task.text}}<fa-icon [ngStyle]="{color: 'red'}" [icon]="faTimes"></fa-icon></h3>
+<div
+  class="task"
+  [ngClass]="{reminder:task.reminder}"
+  (dblclick)="onToggle(task)"
+>
+  <h3>
+    {{task.text}}
+    <fa-icon [ngStyle]="{color: 'red'}" [icon]="faTimes" (click)="(onDelete(task))">
+    </fa-icon>
+  </h3>
   <h3>{{task.day}}</h3>
 </div>
+
