--- a/src/app/components/add-task/add-task.component.html
+++ b/src/app/components/add-task/add-task.component.html
@@ -1,4 +1,4 @@
-<form class="address-form" (ngSubmit)="onSubmit()">
+<form *ngIf="showAddTask" class="address-form" (ngSubmit)="onSubmit()">
   <div class="form-control">
     <label for="text">Task</label>
     <input type="text" id="text" [(ngModel)]="text" name="text" placeholder="add task">
